--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -20,6 +20,7 @@
 
 .carousel-indicators {
   bottom: -2.4375rem;
+  padding-bottom: 10px;
   li {
     background-color: var(--text-color);
   }
@@ -47,5 +48,10 @@
 
 .coach-carousel-inner {
   padding: 60px 40px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
+}
+
+.coach-carousel-indicators {
+  bottom: -150px;
+  padding-bottom: 5px;
 }
