--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,3 +29,9 @@
   font-weight: bold;
   text-align: center;
 }
+
+@media (max-width: $breakpoint-width-bootstrap-sm) {
+  .container > h3 {
+    font-size: 30px;
+  }
+}
