adjust coach cards for mobile to prevent coach images being overlapped

--- a/app/assets/stylesheets/components/_coach-card.scss
+++ b/app/assets/stylesheets/components/_coach-card.scss
@@ -72,6 +72,9 @@
 @media (max-width: $breakpoint-width-bootstrap-sm) {
   .coach-cards {
     grid-template-columns: 1fr;
+  }
 
+  .coach-card-infos {
+    width: 232px;
   }
 }
