--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -20,5 +20,5 @@
 @import "map";
 @import "navtabs";
 @import "modeswitch";
-@import "reviews"
-@import "filter-form"
+@import "reviews";
+@import "filter-form";
