--- a/app/views/lesson_mailer/lesson_booked.text.erb
+++ b/app/views/lesson_mailer/lesson_booked.text.erb
@@ -1,9 +1,9 @@
 Hi <%= @lesson.student.name %>,
 
-Thank you for using SportMe. Your <%= @lesson.sport.name %> lesson (ID:<%=@lesson.id %>) on <%= @lesson.start_date_time.localtime.strftime("%d %b %Y")%> , <%= @lesson.start_date_time.strftime("%I:%M%p") %> is confirmed.
+Thank you for using SportMe. Your <%= @lesson.sport.name %> lesson (ID:<%=@lesson.id %>) on <%= @lesson.start_date_time.strftime("%d %b %Y")%> , <%= @lesson.start_date_time.strftime("%I:%M%p") %> is confirmed.
 
 Visit your coach's webpage  localhost:3000/coaches/<%= @lesson.coach.id %>
 
-For more details, visit localhost:3000. Thank you for using SportMe.
+For more details, visit localhost:3000.
 
 This is an automated message. Please do not reply to this email.
