--- a/app/views/lesson_mailer/lesson_deleted.html.erb
+++ b/app/views/lesson_mailer/lesson_deleted.html.erb
@@ -1,6 +1,6 @@
 <p>Hi <%= @lesson.student.name %>,</p>
 
-<p>Your lesson on <%= @lesson.start_date_time.localtime.strftime("%d %b %Y")%> , <%= @lesson.start_date_time.strftime("%I:%M%p") %> has been cancelled by <%= @lesson.coach.name %>. </p>
+<p>Your lesson on <%= @lesson.start_date_time.strftime("%d %b %Y")%> , <%= @lesson.start_date_time.strftime("%I:%M%p") %> has been cancelled by <%= @lesson.coach.name %>. </p>
 
 <p>For more details, visit <a href='localhost:3000'>SportMe webpage</a></p>
 
