--- a/app/views/lessons/_lessons_list.html.erb
+++ b/app/views/lessons/_lessons_list.html.erb
@@ -7,8 +7,8 @@
         <div>
           <% date = "" %>
           <% @lessons.each do |lesson| %>
-            <% if lesson.start_date_time.localtime.strftime("%d %b %Y") != date %>
-              <div class='accounts-date-card'> <%= lesson.start_date_time.localtime.strftime("%d %b %Y") %></div>
+            <% if lesson.start_date_time.strftime("%d %b %Y") != date %>
+              <div class='accounts-date-card'> <%= lesson.start_date_time.strftime("%d %b %Y") %></div>
               <%= render 'lesson_card', lesson: lesson %>
             <% else %>
               <%= render 'lesson_card', lesson: lesson %>
