--- a/app/assets/stylesheets/pages/_lessons.scss
+++ b/app/assets/stylesheets/pages/_lessons.scss
@@ -132,10 +132,24 @@
   transform-origin: left top;
 }
 
+//lesson modals
 .modal-content {
   color: var(--text-color);
   background-color: var(--background-color);
   border: 1px solid var(--border-color) !important;
+    border-radius: 8px !important;
+}
+
+.fixed-modal {
+  // position: fixed;
+  max-width: 25rem;
+  // max-height: 50rem;
+  padding: 1rem;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 8px;
+  z-index: 1;
 }
 
 .flash {
@@ -176,4 +190,8 @@
   .lesson-details {
     display: none !important;
   }
+  // .fixed-modal {
+  //   max-width: 174px;
+  //   overflow-y: scroll !important;
+  // }
 }
