--- a/app/views/coach/lessons/_list.html.erb
+++ b/app/views/coach/lessons/_list.html.erb
@@ -22,8 +22,10 @@
     <%= link_to 'New Lesson', new_coach_lesson_path, class:"btn btn-flat", data: { target: '#newLessonModal', toggle: 'modal'}  %>
   </div>
 
+  <div class='calendar'>
   <%= render 'calendar'%>
-
+  </div>
+  
   <div class='lesson-header-links'>
     <%= link_to 'Upcoming', coach_lessons_path, class:"lesson-header-link active", data: { action: 'click->lesson#displayLessons'}, remote: true %>
     <%= link_to 'History', history_coach_lessons_path, class:"lesson-header-link", data: { action: 'click->lesson#displayLessons'}, remote: true  %>
@@ -32,7 +34,7 @@
 
   <%= render 'lessons_list'%>
   
-  <%# lesson modal %>
+  <%# lesson modal :show/:edit %>
   <div class="modal fade" id="lessonModal"  tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true" data-lesson-target='lessonModal'>
     <div class="modal-dialog" role="document" data-lesson-target='modalContent'></div>
   </div>
