changed view of show/edit/new coach lessons in default html

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -7,7 +7,7 @@
 }
 
 .filter-input {
-  width: 5rem;
+  width: auto;
   height: 2rem;
   padding: 0;  
   margin-left: .5rem;
@@ -15,21 +15,6 @@
 
 .d-none {
   display: none;
-}
-
-.fixed-modal {
-  position: fixed;
-  max-width: 40rem;
-  padding: 1rem;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 8px;
-  z-index: 1;
-}
-
-.modal-content {
-  border-radius: 8px !important;
 }
 
 @keyframes appear {
