--- a/app/views/coaches/_lessonfilterform.html.erb
+++ b/app/views/coaches/_lessonfilterform.html.erb
@@ -11,7 +11,7 @@
 
   <div class='d-flex'>
     Sorted by:
-    <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by], class:'form-control filter-input')  %>
+    <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by], {}, class:'form-control filter-input')  %>
   </div>
 
   <div>
