--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -71,13 +71,13 @@
     margin: 10px 15px;
   }
 }
-// .coach-carousel-inner {
-//   padding: 60px 40px;
-//   margin-bottom: 30px;
-// }
+.coach-carousel-inner {
+  padding: 60px 40px;
+  margin-bottom: 30px;
+}
 
-// .coach-carousel-indicators {
-//   bottom: -150px;
-//   padding-bottom: 5px;
+.coach-carousel-indicators {
+  bottom: -150px;
+  padding-bottom: 5px;
 
-// }
+}
