--- a/app/assets/stylesheets/pages/_lessons.scss
+++ b/app/assets/stylesheets/pages/_lessons.scss
@@ -84,8 +84,9 @@
   display: flex;
   justify-content: center;
   h4 {
-    height: 50vh;
-    line-height: 50vh;
+    font-size: 1.2rem;
+    height: 15rem;
+    line-height: 15rem;
     text-align: center;
   }
 }
