--- a/app/views/coach/lessons/_lessons_list.html.erb
+++ b/app/views/coach/lessons/_lessons_list.html.erb
@@ -17,5 +17,7 @@
           <% end %>
         </div>
     <% end %>
-    <%== pagy_bootstrap_nav(@pagy, link_extra: 'data-action="click->lesson#displayLessons" data-remote="true"') %>
+    <% if !@lessons.empty? %>
+      <%== pagy_bootstrap_nav(@pagy, link_extra: 'data-action="click->lesson#displayLessons" data-remote="true"') %>
+    <% end %>
   </div>
