--- a/app/views/locations/_info_window.html.erb
+++ b/app/views/locations/_info_window.html.erb
@@ -10,7 +10,7 @@
   <%= link_to "Display Lessons", location_lessons_path(location),
         data: {
           search_location_lessons_target: "selector",
-          action: 'click->search-location-lessons#displayLessons'
+          action: 'click->search-location-lessons#displayLocationLessons'
         },
         remote: true
       %>
