--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -3,13 +3,26 @@
   height: 100vh;
 }
 
-
 .map-sm {
   width: 100%;
   height: 50vh;
 }
 
-@include media-breakpoint-down(sm) {
+.filter-option-sport {
+  display: flex;
+}
+
+.filter-option-location {
+  display: none;
+}
+
+// X-Small devices (portrait phones, less than 576px)
+@media (max-width: 575.98px) {
+
+}
+
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
   .map-lg {
     display: none;
   }
@@ -23,12 +36,17 @@
   }
 }
 
-@include media-breakpoint-up(sm) {
+// Medium devices (tablets, less than 992px)
+@media (max-width: 991.98px) {
 
-  .filter-option-sport {
-    display: flex;
-  }
-  .filter-option-location {
-    display: none;
-  }
+}
+
+// Large devices (desktops, less than 1200px)
+@media (max-width: 1199.98px) {
+
+}
+
+// X-Large devices (large desktops, less than 1400px)
+@media (max-width: 1399.98px) {
+
 }
