small bug fixes

--- a/app/views/coach/lessons/_lesson_card.html.erb
+++ b/app/views/coach/lessons/_lesson_card.html.erb
@@ -15,11 +15,13 @@
             <%= link_to 'Edit',  edit_coach_lesson_path(lesson), class:'btn btn-secondary btn-sm',  data: { action: "click->lesson#displayEditForm", }, remote: true %>
           <% end %>
           <%= link_to 'Details',  coach_lesson_path(lesson), class:'btn btn-secondary btn-sm',  data: { action: "click->lesson#displayShowForm", }, remote: true %>
-          <%= link_to "Delete",
-                      coach_lesson_path(lesson),
-                      method: :delete,
-                      remote: true,
-                      data: { confirm: "Are you sure?" },
-                      class: "btn btn-primary btn-sm" %>
+          <% if lesson.review || lesson.order %>
+            <%= link_to "Delete",
+                        coach_lesson_path(lesson),
+                        method: :delete,
+                        remote: true,
+                        data: { confirm: "Are you sure?" },
+                        class: "btn btn-primary btn-sm" %>
+          <% end %>
         </div>
 </div>
