edited lesson controller to prevent deleting of lesson with an order or review

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -23,17 +23,17 @@
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
-  .map-lg {
-    display: none;
-  }
+  // .map-lg {
+  //   display: none;
+  // }
 
-  .filter-option-sport {
-    display: none;
-  }
+  // .filter-option-sport {
+  //   display: none;
+  // }
 
-  .filter-option-location {
-    display: flex;
-  }
+  // .filter-option-location {
+  //   display: flex;
+//   }
 }
 
 // Medium devices (tablets, less than 992px)
