--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -52,7 +52,7 @@
           </ul>
       </div>
       <div class='coach-competitions'>
-        <h3>Achievments and Awards</h3>
+        <h3>Achievements and Awards</h3>
           <ul>
             <li>MOE-IRS Registered Instructor</li>
             <li>Completed National Standards For Youth Sports (NSYS) workshop in Year 2014</li>
